k8s/cluster-apps/homer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: homer
  name: homer
  namespace: homer
spec:
  selector:
    matchLabels:
      app: homer
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: homer
    spec:
      containers:
        - name: homer
          image: b4bz/homer:latest@sha256:ace7c6a2cfb66e13f0e94d5534cb569562f190aa5cac9446b2453ef7822cd195
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - wget
                - -q
                - localhost:8080
                - -O
                - /dev/null
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - wget
                - -q
                - localhost:8080
                - -O
                - /dev/null
            initialDelaySeconds: 5
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /www/assets/config.yml
              name: config
              subPath: config.yml
            - mountPath: /www/assets/catppuccin-mocha.css
              name: config
              subPath: catppuccin-mocha.css
      restartPolicy: Always
      volumes:
        - configMap:
            defaultMode: 420
            name: homer-config
          name: config
