k8s/cluster-apps/homer/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homer
  name: homer
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: homer
  type: ClusterIP
