k8s/cluster-apps/homer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: homer
  name: homer
  namespace: homer
spec:
  ingressClassName: traefik
  rules:
    - host: homer.k8s.javydekoning.com
      http:
        paths:
          - backend:
              service:
                name: homer
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - homer.k8s.javydekoning.com
      secretName: javydekoning-com-tls
